--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 		<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
 	
 
-	<link rel="stylesheet" href="https://raw.githubusercontent.com/plaguecheatcc/index.php.login/refs/heads/main/forum/css.php?css=public%3Aextra.less&amp;s=19&amp;l=1&amp;d=1732422743&amp;k=52864ca7f64522875bcf4af94f3484d0000c7381" />
+	<link rel="stylesheet" href="https://raw.githubusercontent.com/plaguecheatcc/index.php.login/refs/heads/main/forum/css.php%3Fcss%3Dpublic%253Aextra.less%26s%3D19%26l%3D1%26d%3D1732422743%26k%3D52864ca7f64522875bcf4af94f3484d0000c7381" />
 
 
 	
