--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 	
 	
 
-	<link rel="stylesheet" href="https://raw.githubusercontent.com/plaguecheatcc/index.php.login/refs/heads/main/forum/css.php?css=public%3Anormalize.css%2Cpublic%3Afa.css%2Cpublic%3Acore.less%2Cpublic%3Aapp.less&amp;s=19&amp;l=1&amp;d=1732422743&amp;k=af6b92d9b86913552a36115f92ecf32c19fdcfba" />
+	<link rel="stylesheet" href="https://raw.githubusercontent.com/plaguecheatcc/index.php.login/refs/heads/main/forum/css.php%3Fcss%3Dpublic%253Anormalize.css%252Cpublic%253Afa.css%252Cpublic%253Acore.less%252Cpublic%253Aapp.less%26s%3D19%26l%3D1%26d%3D1732422743%26k%3Daf6b92d9b86913552a36115f92ecf32c19fdcfba" />
 	
 	
 		<link rel="preconnect" href="https://fonts.gstatic.com">
