--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
 
 	
-		<script data-cfasync="false" src="https://raw.githubusercontent.com/plaguecheatcc/index.php.login/refs/heads/main/forum/js/xf/preamble.min.js?_v=9e6c0274"></script>
+		<script data-cfasync="false" src="https://raw.githubusercontent.com/plaguecheatcc/index.php.login/refs/heads/main/forum/js/xf/preamble.min.js%3F_v%3D9e6c0274"></script>
 	
 
 	
