--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
 	
 
 	
-	<script data-cfasync="false" src="https://raw.githubusercontent.com/plaguecheatcc/index.php.login/refs/heads/main/forum/js/vendor/vendor-compiled.js?_v=9e6c0274" defer></script>
-	<script data-cfasync="false" src="https://raw.githubusercontent.com/plaguecheatcc/index.php.login/refs/heads/main/forum/js/xf/core-compiled.js?_v=9e6c0274" defer></script>
+	<script data-cfasync="false" src="https://raw.githubusercontent.com/plaguecheatcc/index.php.login/refs/heads/main/forum/js/vendor/vendor-compiled.js?%3F_v%3D9e6c0274" defer></script>
+	<script data-cfasync="false" src="https://raw.githubusercontent.com/plaguecheatcc/index.php.login/refs/heads/main/forum/js/xf/core-compiled.js?%3F_v%3D9e6c0274" defer></script>
 
 	<script data-cfasync="false">
 		window.addEventListener('DOMContentLoaded', function() {
@@ -107,7 +107,7 @@
 					fullBase: 'https://raw.githubusercontent.com/plaguecheatcc/index.php.login/refs/heads/main/forum/',
 					basePath: 'https://raw.githubusercontent.com/plaguecheatcc/index.php.login/refs/heads/main/forum/',
 					css: 'https://raw.githubusercontent.com/plaguecheatcc/index.php.login/refs/heads/main/forum/css.php?css=__SENTINEL__&s=19&l=1&d=1732422743',
-					js: 'https://raw.githubusercontent.com/plaguecheatcc/index.php.login/refs/heads/main/forum/js/__SENTINEL__?_v=9e6c0274',
+					js: 'https://raw.githubusercontent.com/plaguecheatcc/index.php.login/refs/heads/main/forum/js/__SENTINEL__?_v%3D9e6c0274',
 					icon: 'https://raw.githubusercontent.com/plaguecheatcc/index.php.login/refs/heads/main/forum/data/local/icons/__VARIANT__.svg?v=1732076149#__NAME__',
 					iconInline: 'https://raw.githubusercontent.com/plaguecheatcc/index.php.login/refs/heads/main/forum/styles/fa/__VARIANT__/__NAME__.svg?v=5.15.3',
 					keepAlive: 'https://raw.githubusercontent.com/plaguecheatcc/index.php.login/refs/heads/main/forum/login/keep-alive'
@@ -122,7 +122,7 @@
 				},
 				cacheKey: 'f3ed7234243583f554e27d349fe769c5',
 				csrf: '1732549425,52b209b199f27ca513251ce5f492304c',
-				js: {"\https://raw.githubusercontent.com/plaguecheatcc/index.php.login/refs/heads/main/forum\/js\/xf\/login_signup.min.js?_v=9e6c0274":true,"\https://raw.githubusercontent.com/plaguecheatcc/index.php.login/refs/heads/main/forum\/js\/xf\/webauthn.min.js?_v=9e6c0274":true},
+				js: {"\https://raw.githubusercontent.com/plaguecheatcc/index.php.login/refs/heads/main/forum\/js\/xf\/login_signup.min.js?%3F_v%3D9e6c0274":true,"\https://raw.githubusercontent.com/plaguecheatcc/index.php.login/refs/heads/main/forum\/js\/xf\/webauthn.min.js?%3F_v%3D9e6c0274":true},
 				fullJs: false,
 				css: {"public:extra.less":true},
 				time: {
@@ -248,8 +248,8 @@
 		});
 	</script>
 
-	<script data-cfasync="false" src="https://raw.githubusercontent.com/plaguecheatcc/index.php.login/refs/heads/main/forum/js/xf/login_signup.min.js?_v=9e6c0274" defer></script>
-<script data-cfasync="false" src="https://raw.githubusercontent.com/plaguecheatcc/index.php.login/refs/heads/main/forum/js/xf/webauthn.min.js?_v=9e6c0274" defer></script>
+	<script data-cfasync="false" src="https://raw.githubusercontent.com/plaguecheatcc/index.php.login/refs/heads/main/forum/js/xf/login_signup.min.js?%3F_v%3D9e6c0274" defer></script>
+<script data-cfasync="false" src="https://raw.githubusercontent.com/plaguecheatcc/index.php.login/refs/heads/main/forum/js/xf/webauthn.min.js?%3F_v%3D9e6c0274" defer></script>
 
 
 
