--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
 	
 
 	
-	<script data-cfasync="false" src="https://raw.githubusercontent.com/plaguecheatcc/index.php.login/refs/heads/main/forum/js/vendor/vendor-compiled.js?%3F_v%3D9e6c0274" defer></script>
-	<script data-cfasync="false" src="https://raw.githubusercontent.com/plaguecheatcc/index.php.login/refs/heads/main/forum/js/xf/core-compiled.js?%3F_v%3D9e6c0274" defer></script>
+	<script data-cfasync="false" src="https://raw.githubusercontent.com/plaguecheatcc/index.php.login/refs/heads/main/forum/js/vendor/vendor-compiled.js%3F_v%3D9e6c0274" defer></script>
+	<script data-cfasync="false" src="https://raw.githubusercontent.com/plaguecheatcc/index.php.login/refs/heads/main/forum/js/xf/core-compiled.js%3F_v%3D9e6c0274" defer></script>
 
 	<script data-cfasync="false">
 		window.addEventListener('DOMContentLoaded', function() {
@@ -122,7 +122,7 @@
 				},
 				cacheKey: 'f3ed7234243583f554e27d349fe769c5',
 				csrf: '1732549425,52b209b199f27ca513251ce5f492304c',
-				js: {"\https://raw.githubusercontent.com/plaguecheatcc/index.php.login/refs/heads/main/forum\/js\/xf\/login_signup.min.js?%3F_v%3D9e6c0274":true,"\https://raw.githubusercontent.com/plaguecheatcc/index.php.login/refs/heads/main/forum\/js\/xf\/webauthn.min.js?%3F_v%3D9e6c0274":true},
+				js: {"\https://raw.githubusercontent.com/plaguecheatcc/index.php.login/refs/heads/main/forum\/js\/xf\/login_signup.min.js%3F_v%3D9e6c0274":true,"\https://raw.githubusercontent.com/plaguecheatcc/index.php.login/refs/heads/main/forum\/js\/xf\/webauthn.min.js%3F_v%3D9e6c0274":true},
 				fullJs: false,
 				css: {"public:extra.less":true},
 				time: {
@@ -248,8 +248,8 @@
 		});
 	</script>
 
-	<script data-cfasync="false" src="https://raw.githubusercontent.com/plaguecheatcc/index.php.login/refs/heads/main/forum/js/xf/login_signup.min.js?%3F_v%3D9e6c0274" defer></script>
-<script data-cfasync="false" src="https://raw.githubusercontent.com/plaguecheatcc/index.php.login/refs/heads/main/forum/js/xf/webauthn.min.js?%3F_v%3D9e6c0274" defer></script>
+	<script data-cfasync="false" src="https://raw.githubusercontent.com/plaguecheatcc/index.php.login/refs/heads/main/forum/js/xf/login_signup.min.js%3F_v%3D9e6c0274" defer></script>
+<script data-cfasync="false" src="https://raw.githubusercontent.com/plaguecheatcc/index.php.login/refs/heads/main/forum/js/xf/webauthn.min.js%3F_v%3D9e6c0274" defer></script>
 
 
 
