--- a/index.html
+++ b/index.html
@@ -673,7 +673,7 @@ Get Plaguecheat Now
 				<dd>
 					<div class="formSubmitRow-main">
 						<div class="formSubmitRow-bar"></div>
-						<div class="formSubmitRow-controls"><button type="submit" class="button button--icon button--icon--login button--primary"><i class="fa--xf far fa-lock "><svg xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true" ><use href="https://raw.githubusercontent.com/plaguecheatcc/index.php.login/refs/heads/main/forum/data/local/icons/regular.svg?v=1732076149#lock"></use></svg></i><span class="button-text">Log in</span></button></div>
+						<div class="formSubmitRow-controls"><button type="submit" class="button button--icon button--icon--login button--primary"><i class="fa--xf far fa-lock "><svg xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true" ><use href="https://raw.githubusercontent.com/plaguecheatcc/index.php.login/refs/heads/main/forum/data/local/icons/regular.svg%3Fv%3D1732076149#lock"></use></svg></i><span class="button-text">Log in</span></button></div>
 					</div>
 				</dd>
 			</dl>
@@ -786,7 +786,7 @@ Get Plaguecheat Now
 						<li><a href="https://raw.githubusercontent.com/plaguecheatcc/index.php.login/refs/heads/main/forum/pages/index/">Home</a></li>
 					
 
-					<li><a href="https://raw.githubusercontent.com/plaguecheatcc/index.php.login/refs/heads/main/forumhttps://raw.githubusercontent.com/plaguecheatcc/index.php.login/refs/heads/main/forums/-/index.rss" target="_blank" class="p-footer-rssLink" title="RSS"><span aria-hidden="true"><i class="fa--xf far fa-rss "><svg xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true" ><use href="https://raw.githubusercontent.com/plaguecheatcc/index.php.login/refs/heads/main/forum/data/local/icons/regular.svg?v=1732076149#rss"></use></svg></i><span class="u-srOnly">RSS</span></span></a></li>
+					<li><a href="https://raw.githubusercontent.com/plaguecheatcc/index.php.login/refs/heads/main/forumhttps://raw.githubusercontent.com/plaguecheatcc/index.php.login/refs/heads/main/forums/-/index.rss" target="_blank" class="p-footer-rssLink" title="RSS"><span aria-hidden="true"><i class="fa--xf far fa-rss "><svg xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true" ><use href="https://raw.githubusercontent.com/plaguecheatcc/index.php.login/refs/heads/main/forum/data/local/icons/regular.svg%3Fv%3D1732076149#rss"></use></svg></i><span class="u-srOnly">RSS</span></span></a></li>
 				</ul>
 			</div>
 			
